@@ -1,3 +1,8 @@
+2013-08-31 Sat  Jari Aalto  <jari.aalto@cante.net>
+
+	* epackage.el (epackage-cmd-sources-list-upgrade): Add
+	download done message.
+
 2013-07-03 Wed  Jari Aalto  <jari.aalto@cante.net>
 
 	* epackage.el: (DOC::Details of the info file fields): Add
